* Fri Mar 09 2007 Damien Caliste <damien.caliste@cea.fr> 0.8
- add two more tutorials, one on the split usage and one on the high level routines.
- improve the documentation, especially the non robodoc pages.
- create a high level routine to check the validity of a file on the big domains
  the specifications deal with.
- create a high level routine to get the names of chemical species following the
  recommendations in the specifications.
- add two more actions to the etsf_io tool: the content and the check actions.
- fix some bugs in the buid system and in the low level part.
	
* Wed Jan 17 2007 Damien Caliste <damien.caliste@cea.fr> 0.7
- add a new Fortran type to store the split definitions (e.g. my_kpoints...). This
  structure can be used when defining the variables on initialisation to set the
  splitted dimensions to the variables that need them.
- add a new source directory src/utils that will contains some high level library
  not mandatory but with convienient tools. It currently contains a routine to merge
  files that have been created with some split definition. To do it several group
  level have been added, especially some to copy variables from one file to another.
  The split action is complete for all ETSF variables, but other ones are currently
  lost, but also attributes and headers are lost.
- add a new tutorial on sub access. It explain how to use the
  <varname>__[spin|kpoint]_access attributes of groups that have been introduced in
  the last release.
	
* Tue Dec 12 2006 Damien Caliste <caliste@pcpm.ucl.ac.be> 0.6
- rewrite the generating script for low access in Python for a better portability.
- complete the implementation of all attributes (units, k_dependent and symmorphic).
  The unit attributes change the reading behavior, getting the values into atomic
  units, except if the optional argument use_atomic_units is set to false. The
  k_dependent attribute change the size of the array reduced_coordinates_of_plane_waves